--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.2.4",
     "geist": "^1.3.0",
     "next": "^14.2.1",
@@ -27,6 +28,7 @@
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.3.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
