--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@trpc/client": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "@types/nodemailer": "^6.4.15",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.4",
     "geist": "^1.3.0",
     "next": "^14.2.1",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
